@startuml
package torreHanoi {

    class Pila {
        - Arraylist<> pila : T
        + push(T element) : void
        + pop() : T
        + top() : T
        + isEmpty() : boolean
        + size() : int
    }

    class Colonna {
        - nomeColonna: String
        - dimensione: int
        - inizializzaDischi(startDim : int) : void
        + push(T element) : void
        + pop() : T
    }
    class Disco {
        - dimensione : int
    }

    Exception WrongDimensionException {

    }

    Class Exception {
    }

    Class Torri {

    }
}

package Main {
    class main {
    }
}

Colonna ---> main : Istanzia

WrongDimensionException --> Exception
Colonna -- WrongDimensionException

Colonna -left-> Pila : <extends>
Disco "0..*  " ..o "1  " Colonna

Colonna "3" .right.o "1" Torri
@enduml